<resources>
    <string name="app_name">Simple Notes</string>

    <string name="main_search_placeholder">Search</string>
    <string name="search_hint">Search notes from list</string>
    <string name="action_addNote">Add Note</string>
    <string name="note_title">Title</string>
    <string name="note_title_hint">Add a title here</string>
    <string name="note_content_hint">Add Text</string>
    <string name="button_save">Save</string>
    <string name="sort_prompt">Sort by</string>
    <string name="importance_text">Importance</string>
    <string name="importance_prompt">Select importance</string>
    <string name="archived_check">Show archived notes</string>
    <string name="create_label">Created on</string>
    <string name="modif_label">Modified on</string>
    <string name="save_button">Save</string>
    <string name="remove_button">Remove</string>
    <string name="archived_note_check_text">Archive</string>

    <string-array name="drawer_item_list">
        <item>Notes</item>
        <item>Archived notes</item>
    </string-array>
    <string-array name="sort_array">
        <item>Title</item>
        <item>Creation date</item>
        <item>Last modification date</item>
        <item>Importance</item>
    </string-array><string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="last_not_modified">Not modified yet</string>
    <string name="num_selected_items">selected</string>
    <string name="duplicate_note">Duplicate note</string>
    <string name="empty_note_list">Empty list</string>
    <string name="groupes_text_drawer">Groups</string>
    <string name="attribute_group">Attach to group</string>
    <string name="new_group">New group</string>
    <string name="create_group">Create</string>
</resources>
