<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/remove_item"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="always"
        android:orderInCategory="10"
        android:title="@string/remove_button">
    </item>

    <item
        android:id="@+id/unarchive_item"
        android:icon="@drawable/ic_undo_white_24dp"
        android:showAsAction="always"
        android:orderInCategory="10"
        android:title="@string/archived_note_check_text">
    </item>

    <item
        android:id="@+id/done_edit"
        android:icon="@drawable/ic_done_white_24dp"
        android:showAsAction="always"
        android:orderInCategory="10"
        android:title="@string/save_button">
    </item>
    <item
        android:id="@+id/note_duplicate"
        android:icon="@drawable/ic_action_copy"
        android:showAsAction="ifRoom"
        android:orderInCategory="10"
        android:title="@string/duplicate_note">
    </item>

    <item
        android:id="@+id/note_add_group"
        android:icon="@android:drawable/ic_input_get"
        android:showAsAction="ifRoom"
        android:orderInCategory="10"
        android:title="@string/attribute_group">
    </item>
</menu>