<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gp19.esgi.simplenotes.AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:text="@string/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/note_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/note_title_hint"
            android:gravity="center"
            android:maxLength="22"/>

    </LinearLayout>

    <EditText
        android:id="@+id/note_content"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:hint="@string/note_content_hint"
        android:editable="true"
        android:enabled="true"
        android:gravity="top"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_text"
            android:id="@+id/importanceText"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_importance"
            android:layout_gravity="center_vertical"
            android:prompt="@string/importance_prompt"
            android:layout_weight="0.2" />
    </LinearLayout>

</LinearLayout>
