<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gp19.esgi.simplenotes.DetailsNoteFragment"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:id="@+id/textView"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_title"
            android:hint="@string/note_title_hint"
            android:maxLength="22"
            android:gravity="center"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edit_content"
        android:layout_weight="3"
        android:enabled="true"
        android:gravity="top" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_text"
            android:layout_gravity="center_vertical"
            android:id="@+id/importance_text_view_edit"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/importance_edit_spinner"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:prompt="@string/importance_prompt"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/archived_note_check_text"
            android:id="@+id/checkBox_archived" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:text="@string/save_button"
            android:background="@drawable/add_button"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_label"
                android:id="@+id/create_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/creation_date_label"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modif_label"
                android:id="@+id/modif_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/modification_date_label"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
